# ltext

./: .gitignore  .ltext.cabal.swp  LICENSE  Notes.md  README.md  TODO  TODO.md  bar  default.nix  foo  ltext.cabal  ltext.cabal.old  package.yaml  stack.yaml  test.txt  testFun
.ltext/: config.yaml
app/: Main.hs
examples/: apply  bar  foo  foo2
nix/: sources.json
paper/: main.aux  main.out  main.tex  winnower.cls  winnower_template.bib
snap/: snapcraft.yaml
src/: LText.hs  Main.hs
src/Application/: Types.hs
src/LText/: ATLC.hs  Document.hs  Eval.hs  Expr.hs  Internal.hs  Renderer.hs  Type.hs
src/LText-Old/: Internal.hs
src/LText-Old/Internal/: Expr.hs  Types.hs
src/LText-Old/Internal/Expr/: TH.hs
src/LText-Old/Parser/: Document.hs  Expr.hs  Lexer.hs
src/LText/ATLC/: Expression.hs  Inference.hs  Types.hs
src/LText/Internal/: .Utils.hs.swn  Classes.hs  ConstraintParser.hs  Constraints.hs  Evaluation.hs  Expr.hs  Inference.hs  TypeSigParser.hs  Types.hs  Utils.hs
src/LText/Internal/Expr/: TH.hs
src/LText/Internal/TypeSigParser/: AbstypeSig.hs  DoctypeSig.txt  ErrM.hs  LextypeSig.hs  LextypeSig.x  PartypeSig.hs  PartypeSig.y  PrinttypeSig.hs  SkeltypeSig.hs  TesttypeSig.hs
src/LText/Parser/: Document.hs  Expr.hs  Header.hs  Lexer.hs  Types.hs  Unobtrusive.hs
src/Main/: Internal.hs
test/: Main.hs  MainSpec.hs
typeSigParser/: AbstypeSig.hs  PrinttypeSig.hs  SkeltypeSig.hs  TesttypeSig.hs  typeSig.cf
