Name:                   ltext
Version:                0.0.2.1
Author:                 Athan Clark <athan.clark@gmail.com>
Maintainer:             Athan Clark <athan.clark@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Higher-order file applicator
Category:               Text, Tools, Utils, Filesystem
Description:
  λtext is a general-purpose templating utility for text files.
  .
  Turn plaintext files into lambdas -
  function application then becomes concatenation.
  .
  Please see the <https://github.com/ltext/ltext github page> for more details.
  .
  All credits go to Martin Grabmueller's <http://hackage.haskell.org/package/AlgorithmW AlgorithmW>
  package for the type inference algorithm used in λtext.
Cabal-Version:          >= 1.10
Build-Type:             Simple


Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      LText.Internal
                        LText.Internal.Classes
                        LText.Internal.Expr
                        LText.Internal.Expr.TH
                        LText.Internal.Types
                        LText.Internal.Inference
                        LText.Internal.Evaluation
                        LText.Parser.Document
                        LText.Parser.Lexer
                        LText.Parser.Expr
                        LText.Renderer
  Build-Depends:        base >= 4.6 && < 5
                      , mtl >= 2.0.1 && <2.2 || >=2.2.0.1 && <2.3
                      , mtl-compat >= 0.2.0.4
                      , transformers >=0.4.1 && <0.5
                      , containers >= 0.5
                      , pretty
                      , text
                      , parsec
                      , deepseq
                      , template-haskell

Executable ltext
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall -threaded
  Main-Is:              Main.hs
  Build-Depends:        base >= 4.6 && < 5
                      , optparse-applicative >= 0.9
                      , mtl >= 2.0.1 && <2.2 || >=2.2.0.1 && <2.3
                      , mtl-compat >= 0.2.0.4
                      , transformers >=0.4.1 && <0.5
                      , containers >= 0.5
                      , yaml >= 0.8
                      , aeson
                      , directory
                      , data-default
                      , text
                      , parsec
                      , pretty
                      , deepseq
                      , template-haskell

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , mtl

Source-Repository head
  Type:                 git
  Location:             https://github.com/ltext/ltext.git
