Name:                   ltext
Version:                1.0.0
Author:                 Athan Clark <athan.clark@gmail.com>
Maintainer:             Athan Clark <athan.clark@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Higher-order file applicator
Category:               Text, Tools, Utils, Filesystem
Description:
  λtext is a general-purpose templating utility for text files.
  .
  Turn plaintext files into lambdas -
  function application then becomes concatenation.
  .
  Please see the <https://github.com/ltext/ltext github page> for more details.
  .
  All credits go to Martin Grabmueller's <http://hackage.haskell.org/package/AlgorithmW AlgorithmW>
  package for the type inference algorithm used in λtext.
Cabal-Version:          >= 1.10
Build-Type:             Simple


Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:     Application.Types
                       LText.Expr
                       LText.Type
  Build-Depends:        base >= 4.8 && < 5
                      , mtl
                      , attoparsec
                      , transformers
                      , unordered-containers
                      , exceptions
                      , HFuse
                      , pretty
                      , parsec
                      , text
                      , parsec
                      , deepseq
                      , template-haskell
                      , QuickCheck
                      , quickcheck-combinators

Executable ltext
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall -threaded
  Main-Is:              Main.hs
  Other-Modules:       Application.Types
                       LText.Expr
                       LText.Type
  Build-Depends:        base >= 4.8 && < 5
                      , optparse-applicative
                      , attoparsec
                      , mtl
                      , exceptions
                      , transformers
                      , unordered-containers
                      , data-default
                      , text
                      , parsec
                      , attoparsec
                      , pretty
                      , deepseq
                      , template-haskell
                      , QuickCheck
                      , quickcheck-combinators

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              Main.hs
  Build-Depends:        base
                      , ltext
                      , hspec
                      , mtl
                      , optparse-applicative
                      , attoparsec
                      , mtl
                      , exceptions
                      , transformers
                      , unordered-containers
                      , data-default
                      , text
                      , parsec
                      , attoparsec
                      , pretty
                      , deepseq
                      , template-haskell
                      , QuickCheck
                      , quickcheck-combinators
                      , tasty
                      , tasty-quickcheck

Source-Repository head
  Type:                 git
  Location:             https://github.com/ltext/ltext.git
